ajout d'une todo

--- a/index.html
+++ b/index.html
@@ -11,3 +11,6 @@
     <script type="module" src="/js/main.js"></script>
   </body>
 </html>
+
+
+<!-- On a un conteneur et on charge un fichier js principal.  -->
